<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_clrd"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/nav_banner"
        android:icon="@drawable/ic_banner"
        android:title="@string/menu_banner" />

    <item
        android:id="@+id/nav_categories"
        android:icon="@drawable/ic_sq_boxes_clrd"
        android:title="@string/menu_categories" />
    <item
        android:id="@+id/nav_items"
        android:icon="@drawable/ic_bags_clrd"
        android:title="@string/menu_items" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile_clrd"
        android:title="@string/menu_profile" />


    <group  android:id="@+id/group1"
            android:checkableBehavior="none">

    <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="Logout" />

    </group>

</menu>