<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:visible="true"-->
<!--        android:id="@+id/action_sync"-->
<!--        android:orderInCategory="100"-->
<!--        android:icon="@drawable/ic_sync"-->
<!--        android:title="@string/action_sync"-->
<!--        app:showAsAction="ifRoom" />-->

    <item
        android:id="@+id/action_add_new_cat"
        android:orderInCategory="100"
        android:title="@string/action_add_new_cat"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_by"
        android:orderInCategory="100"
        android:title="@string/action_sort_AZ"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />
</menu>